fix: allow horizontal scrolling of page's title on mobile.

--- a/src/styles/app/_title-bar.scss
+++ b/src/styles/app/_title-bar.scss
@@ -15,6 +15,10 @@
 
       & h1 {
         width: fit-content;
+
+        @media (max-width: 1025px) {
+          width: auto;
+        }
       }
     }
 
